Add Europeiska Jordbruksfonden to sponsor list
This commit adds Europeiska Jordbruksfonden to the list of sponsors on
all relevant pages of the app.

Also:
- Some cleanup of unused pages

--- a/newsB.html
+++ b/newsB.html
@@ -452,7 +452,9 @@ Y88b  d88P Y88b.    888     888 888 d88P Y88b.       X88
           <br>
           <a class="orange-text text-lighten-3 modal-trigger" href="#skane">Region Skåne</a>
           <br>
-          <a class="orange-text text-lighten-3 modal-trigger" href="#lansstyrelsen">Lansstyrelsen Skåne</a>
+          <a class="orange-text text-lighten-3 modal-trigger" href="#lansstyrelsen">Länsstyrelsen Skåne</a>
+          <br>
+          <a class="orange-text text-lighten-3 modal-trigger" href="#europeiska-jordbruksfonden">Europeiska Jordbruksfonden</a>
         </div>
         <div class="col s6 m4 l2">Language
           <br>
@@ -499,11 +501,18 @@ Y88b  d88P Y88b.    888     888 888 d88P Y88b.       X88
   </div>
   <div id="skane" class="modal">
     <div class="modal-content row center-align">
-      <img src="img/regionSkane.svg" alt="Region Skane" class="responsive-img" /> </div>
+      <img src="img/regionSkane.svg" alt="Region Skane" class="responsive-img" />
+    </div>
   </div>
   <div id="lansstyrelsen" class="modal">
     <div class="modal-content row center-align">
-      <img src="img/lansstyrelsen.svg" alt="Lansstyrelsen Skane" class="responsive-img" /> </div>
+      <img src="img/lansstyrelsen.svg" alt="Lansstyrelsen Skane" class="responsive-img" />
+    </div>
+  </div>
+  <div id="europeiska-jordbruksfonden" class="modal">
+    <div class="modal-content row center-align">
+      <img src="img/europeiska_jordbruksfonden.svg" alt="Europeiska Jordbruksfonden" class="responsive-img" />
+    </div>
   </div>
   <!--
 ███████  ██████ ██████  ██ ██████  ████████
