--- a/embedEnB.html
+++ b/embedEnB.html
@@ -113,7 +113,9 @@
           <br>
           <a class="orange-text text-lighten-3 modal-trigger" href="#skane">Region Skåne</a>
           <br>
-          <a class="orange-text text-lighten-3 modal-trigger" href="#lansstyrelsen">Lansstyrelsen Skåne</a>
+          <a class="orange-text text-lighten-3 modal-trigger" href="#lansstyrelsen">Länsstyrelsen Skåne</a>
+          <br>
+          <a class="orange-text text-lighten-3 modal-trigger" href="#europeiska-jordbruksfonden">Europeiska Jordbruksfonden</a>
         </div>
         <div class="col s6 m4 l2">Language
           <br>
@@ -138,6 +140,11 @@
   <div id="lansstyrelsen" class="modal">
     <div class="modal-content row center-align">
       <img src="img/lansstyrelsen.svg" alt="Lansstyrelsen Skane" class="responsive-img" /> </div>
+  </div>
+  <div id="europeiska-jordbruksfonden" class="modal">
+    <div class="modal-content row center-align">
+      <img src="img/europeiska_jordbruksfonden.svg" alt="Europeiska Jordbruksfonden" class="responsive-img" />
+    </div>
   </div>
   <div id="carlos" class="modal">
     <div class="modal-content row center-align">
