Update all github references to new org

--- a/embedSvB.html
+++ b/embedSvB.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>HikingKullaberg.com</title>
   <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=0.0, maximum-scale=10.0">
-  <link rel="canonical" href="https://xtreemze.github.io/KullabergApp/embedSv.html" />
+  <link rel="canonical" href="https://kullaberg.github.io/KullabergApp/embedSv.html" />
   <meta http-equiv="refresh" content="300">
   <!--
  ██████ ███████ ███████
@@ -30,8 +30,8 @@
   <meta name="apple-mobile-web-app-title" content="Kullaberg">
   <meta name="application-name" content="Kullaberg">
   <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="msapplication-TileImage" content="https://xtreemze.github.io/KullabergApp/mstile-310x310.png">
-  <meta name="msapplication-config" content="https://xtreemze.github.io/KullabergApp/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="https://kullaberg.github.io/KullabergApp/mstile-310x310.png">
+  <meta name="msapplication-config" content="https://kullaberg.github.io/KullabergApp/browserconfig.xml">
   <meta name="theme-color" content="#0d47a1">
   <!--
 		███████  ██████ ██████  ██ ██████  ████████
@@ -40,8 +40,8 @@
 		     ██ ██      ██   ██ ██ ██         ██
 		███████  ██████ ██   ██ ██ ██         ██
 		-->
-  <script src="https://xtreemze.github.io/KullabergApp/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="https://xtreemze.github.io/KullabergApp/js/materialize.min.js" charset="utf-8"></script>
+  <script src="https://kullaberg.github.io/KullabergApp/js/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="https://kullaberg.github.io/KullabergApp/js/materialize.min.js" charset="utf-8"></script>
   <!--<script src="bundle.js"></script>-->
   <!--
 ██████   ██████  ██████  ██    ██
