--- a/poiBSv.html
+++ b/poiBSv.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>Hiking Kullaberg</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="canonical" href="https://xtreemze.github.io/KullabergApp/poiSv.html" />
+  <link rel="canonical" href="https://kullaberg.github.io/KullabergApp/poiSv.html" />
   <!--
 ███████  █████  ██    ██ ██  ██████  ██████  ███    ██
 ██      ██   ██ ██    ██ ██ ██      ██    ██ ████   ██
@@ -13,16 +13,16 @@
 ██      ██   ██  ██  ██  ██ ██      ██    ██ ██  ██ ██
 ██      ██   ██   ████   ██  ██████  ██████  ██   ████
 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://xtreemze.github.io/KullabergApp/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="https://xtreemze.github.io/KullabergApp/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="https://xtreemze.github.io/KullabergApp/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://kullaberg.github.io/KullabergApp/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="https://kullaberg.github.io/KullabergApp/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://kullaberg.github.io/KullabergApp/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="https://xtreemze.github.io/KullabergApp/safari-pinned-tab.svg" color="#0d47a1">
+  <link rel="mask-icon" href="https://kullaberg.github.io/KullabergApp/safari-pinned-tab.svg" color="#0d47a1">
   <meta name="apple-mobile-web-app-title" content="Kullaberg">
   <meta name="application-name" content="Kullaberg">
   <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="msapplication-TileImage" content="https://xtreemze.github.io/KullabergApp/mstile-310x310.png">
-  <meta name="msapplication-config" content="https://xtreemze.github.io/KullabergApp/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="https://kullaberg.github.io/KullabergApp/mstile-310x310.png">
+  <meta name="msapplication-config" content="https://kullaberg.github.io/KullabergApp/browserconfig.xml">
   <meta name="theme-color" content="#0d47a1">
   <!--
 		███████  ██████ ██████  ██ ██████  ████████
@@ -2225,7 +2225,7 @@
           <a href="https://www.behance.net/2Active" class="tooltipped onlineOnly" data-position="bottom" data-delay="50" data-tooltip="Behance Portfolio">
             <i class="mdi mdi-behance medium"></i>
           </a>
-          <a href="https://github.com/xtreemze?tab=repositories
+          <a href="https://github.com/kullaberg?tab=repositories
                            " class="tooltipped onlineOnly" data-position="bottom" data-delay="50" data-tooltip="Github Repositories">
             <i class="mdi mdi-github-box medium"></i>
           </a>
