--- a/mapsB.html
+++ b/mapsB.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>Kullaberg</title>
   <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=0.0, maximum-scale=10.0">
-  <link rel="canonical" href="https://xtreemze.github.io/KullabergApp/maps.html" />
+  <link rel="canonical" href="https://kullaberg.github.io/KullabergApp/maps.html" />
   <!--
  ██████ ███████ ███████
 ██      ██      ██
@@ -22,15 +22,15 @@
 ██      ██   ██   ████   ██  ██████  ██████  ██   ████
 -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="https://xtreemze.github.io/KullabergApp/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="https://xtreemze.github.io/KullabergApp/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="https://kullaberg.github.io/KullabergApp/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://kullaberg.github.io/KullabergApp/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="https://xtreemze.github.io/KullabergApp/safari-pinned-tab.svg" color="#0d47a1">
+  <link rel="mask-icon" href="https://kullaberg.github.io/KullabergApp/safari-pinned-tab.svg" color="#0d47a1">
   <meta name="apple-mobile-web-app-title" content="Kullaberg">
   <meta name="application-name" content="Kullaberg">
   <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="msapplication-TileImage" content="https://xtreemze.github.io/KullabergApp/mstile-310x310.png">
-  <meta name="msapplication-config" content="https://xtreemze.github.io/KullabergApp/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="https://kullaberg.github.io/KullabergApp/mstile-310x310.png">
+  <meta name="msapplication-config" content="https://kullaberg.github.io/KullabergApp/browserconfig.xml">
   <meta name="theme-color" content="#0d47a1">
   <!--
 		███████  ██████ ██████  ██ ██████  ████████
@@ -39,8 +39,8 @@
 		     ██ ██      ██   ██ ██ ██         ██
 		███████  ██████ ██   ██ ██ ██         ██
 		-->
-  <script src="https://xtreemze.github.io/KullabergApp/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="https://xtreemze.github.io/KullabergApp/js/materialize.min.js" charset="utf-8"></script>
+  <script src="https://kullaberg.github.io/KullabergApp/js/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="https://kullaberg.github.io/KullabergApp/js/materialize.min.js" charset="utf-8"></script>
   <!--<script src="bundle.js"></script>-->
 </head>
 <!--
@@ -159,9 +159,9 @@
 -->
   <main class="grey lighten-3">
     <div id="1" class="scroll center-align">
-      <img class="map1" src="https://xtreemze.github.io/KullabergApp/img/kullabergKarta.svg" alt="Kullaberg Trail Map" /> </div>
+      <img class="map1" src="https://kullaberg.github.io/KullabergApp/img/kullabergKarta.svg" alt="Kullaberg Trail Map" /> </div>
     <div id="2" class="scroll center-align">
-      <img class="map2" src="https://xtreemze.github.io/KullabergApp/img/t1/0.jpg" alt="Kullaleden Trail Map">
+      <img class="map2" src="https://kullaberg.github.io/KullabergApp/img/t1/0.jpg" alt="Kullaleden Trail Map">
     </div>
   </main>
   <!--
@@ -250,7 +250,7 @@
           <i class="mdi mdi-behance
 										medium"></i>
         </a>
-        <a href="https://github.com/xtreemze?tab=repositories" class="tooltipped onlineOnly" data-position="bottom" data-delay="50"
+        <a href="https://github.com/kullaberg?tab=repositories" class="tooltipped onlineOnly" data-position="bottom" data-delay="50"
           data-tooltip="Github Repositories">
           <i class="mdi mdi-github-box medium"></i>
         </a>
@@ -279,7 +279,7 @@
      ██ ██      ██   ██ ██ ██         ██
 ███████  ██████ ██   ██ ██ ██         ██
 -->
-  <script src="https://xtreemze.github.io/KullabergApp/js/init2.min.js"></script>
+  <script src="https://kullaberg.github.io/KullabergApp/js/init2.min.js"></script>
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
